// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchPage renders the empty state 1`] = `
<DocumentFragment>
  <div
    class="c-page m-search-page m-search-page--show-list "
  >
    <div
      class="m-search-page__input-and-results"
    >
      <div
        class="m-search-page__input"
      >
        <form
          class="m-search-form"
        >
          <div
            class="m-search-form__row"
          >
            <div
              class="m-search-form__text"
            >
              <input
                class="m-search-form__input"
                placeholder="Search"
                type="text"
                value=""
              />
              <button
                class="m-search-form__clear"
                title="Clear Search"
                type="reset"
              >
                <span>
                  <svg />
                </span>
              </button>
            </div>
            <button
              class="m-search-form__submit button-submit"
              disabled=""
              title="Submit"
              type="submit"
            >
              <span>
                <svg />
              </span>
            </button>
          </div>
          <div
            class="m-search-form__row"
          >
            <ul
              class="m-search-form__property-buttons"
            >
              <li
                class="m-search-form__property-button"
              >
                <input
                  checked=""
                  class="m-search-form__property-input"
                  id="property-all"
                  name="property"
                  type="radio"
                  value="all"
                />
                <label
                  class="m-search-form__property-label button-search-filter"
                  for="property-all"
                >
                  all
                </label>
              </li>
              <li
                class="m-search-form__property-button"
              >
                <input
                  class="m-search-form__property-input"
                  id="property-run"
                  name="property"
                  type="radio"
                  value="run"
                />
                <label
                  class="m-search-form__property-label button-search-filter"
                  for="property-run"
                >
                  run
                </label>
              </li>
              <li
                class="m-search-form__property-button"
              >
                <input
                  class="m-search-form__property-input"
                  id="property-vehicle"
                  name="property"
                  type="radio"
                  value="vehicle"
                />
                <label
                  class="m-search-form__property-label button-search-filter"
                  for="property-vehicle"
                >
                  vehicle
                </label>
              </li>
              <li
                class="m-search-form__property-button"
              >
                <input
                  class="m-search-form__property-input"
                  id="property-operator"
                  name="property"
                  type="radio"
                  value="operator"
                />
                <label
                  class="m-search-form__property-label button-search-filter"
                  for="property-operator"
                >
                  operator
                </label>
              </li>
            </ul>
          </div>
        </form>
        <button
          class="m-search-page__toggle-mobile-display-button"
        >
          Show map instead
        </button>
      </div>
      <div
        class="m-search-display"
      >
        <div
          class="m-recent-searches"
        >
          <div
            class="m-recent-searches__heading"
          >
            Recent Searches
          </div>
          <ul />
        </div>
      </div>
    </div>
    <div
      class="m-search-page__map"
    >
      <div
        class="m-vehicle-map-state m-vehicle-map-state--auto-centering"
      />
      <div
        class="m-vehicle-map leaflet-container leaflet-touch leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
        id="id-vehicle-map"
        style="position: relative;"
        tabindex="0"
      >
        <div
          class="leaflet-pane leaflet-map-pane"
          style="left: 0px; top: 0px;"
        >
          <div
            class="leaflet-pane leaflet-tile-pane"
          >
            <div
              class="leaflet-layer "
              style="z-index: 1;"
            >
              <div
                class="leaflet-tile-container leaflet-zoom-animated"
                style="z-index: 18; left: 0px; top: 0px;"
              >
                <img
                  alt=""
                  class="leaflet-tile"
                  src="/13/2479/3029.png"
                  style="width: 256px; height: 256px; left: -4px; top: -239px;"
                />
              </div>
            </div>
          </div>
          <div
            class="leaflet-pane leaflet-overlay-pane"
          />
          <div
            class="leaflet-pane leaflet-shadow-pane"
          />
          <div
            class="leaflet-pane leaflet-marker-pane"
          />
          <div
            class="leaflet-pane leaflet-tooltip-pane"
          />
          <div
            class="leaflet-pane leaflet-popup-pane"
          />
        </div>
        <div
          class="leaflet-control-container"
        >
          <div
            class="leaflet-top leaflet-left"
          />
          <div
            class="leaflet-top leaflet-right"
          >
            <div
              class="leaflet-control-zoom leaflet-bar leaflet-control"
            >
              <a
                aria-disabled="false"
                aria-label="Zoom in"
                class="leaflet-control-zoom-in"
                href="#"
                role="button"
                title="Zoom in"
              >
                <span
                  aria-hidden="true"
                >
                  +
                </span>
              </a>
              <a
                aria-disabled="false"
                aria-label="Zoom out"
                class="leaflet-control-zoom-out"
                href="#"
                role="button"
                title="Zoom out"
              >
                <span
                  aria-hidden="true"
                >
                  −
                </span>
              </a>
            </div>
            <div
              class="leaflet-bar leaflet-control"
            >
              <a
                aria-label="Full Screen"
                class="leaflet-control-zoom-fullscreen fullscreen-icon"
                href="#"
                role="button"
                title="Full Screen"
              />
            </div>
            <div
              class="leaflet-control leaflet-bar m-vehicle-map__recenter-button"
            >
              
		
              <a
                aria-label="Recenter Map"
                href="#"
                role="button"
                title="Recenter Map"
              >
                
		    
                <svg
                  height="26"
                  viewBox="-5 -5 32 32"
                  width="26"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  
			
                  <path
                    d="m10 2.7-6.21 16.94a2.33 2.33 0 0 0 1.38 3 2.36 2.36 0 0 0 1.93-.14l4.9-2.67 4.89 2.71a2.34 2.34 0 0 0 3.34-2.8l-5.81-17a2.34 2.34 0 0 0 -4.4 0z"
                    transform="rotate(60, 12, 12)"
                  />
                  
		    
                </svg>
                
		
              </a>
            </div>
          </div>
          <div
            class="leaflet-bottom leaflet-left"
          />
          <div
            class="leaflet-bottom leaflet-right"
          >
            <div
              class="leaflet-control-attribution leaflet-control"
            >
              © 
              <a
                href="http://osm.org/copyright"
              >
                OpenStreetMap
              </a>
               contributors
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchPage renders vehicle data 1`] = `
<DocumentFragment>
  <div
    class="c-page m-search-page m-search-page--show-list "
  >
    <div
      class="m-search-page__input-and-results"
    >
      <div
        class="m-search-page__input"
      >
        <form
          class="m-search-form"
        >
          <div
            class="m-search-form__row"
          >
            <div
              class="m-search-form__text"
            >
              <input
                class="m-search-form__input"
                placeholder="Search"
                type="text"
                value=""
              />
              <button
                class="m-search-form__clear"
                title="Clear Search"
                type="reset"
              >
                <span>
                  <svg />
                </span>
              </button>
            </div>
            <button
              class="m-search-form__submit button-submit"
              disabled=""
              title="Submit"
              type="submit"
            >
              <span>
                <svg />
              </span>
            </button>
          </div>
          <div
            class="m-search-form__row"
          >
            <ul
              class="m-search-form__property-buttons"
            >
              <li
                class="m-search-form__property-button"
              >
                <input
                  checked=""
                  class="m-search-form__property-input"
                  id="property-all"
                  name="property"
                  type="radio"
                  value="all"
                />
                <label
                  class="m-search-form__property-label button-search-filter"
                  for="property-all"
                >
                  all
                </label>
              </li>
              <li
                class="m-search-form__property-button"
              >
                <input
                  class="m-search-form__property-input"
                  id="property-run"
                  name="property"
                  type="radio"
                  value="run"
                />
                <label
                  class="m-search-form__property-label button-search-filter"
                  for="property-run"
                >
                  run
                </label>
              </li>
              <li
                class="m-search-form__property-button"
              >
                <input
                  class="m-search-form__property-input"
                  id="property-vehicle"
                  name="property"
                  type="radio"
                  value="vehicle"
                />
                <label
                  class="m-search-form__property-label button-search-filter"
                  for="property-vehicle"
                >
                  vehicle
                </label>
              </li>
              <li
                class="m-search-form__property-button"
              >
                <input
                  class="m-search-form__property-input"
                  id="property-operator"
                  name="property"
                  type="radio"
                  value="operator"
                />
                <label
                  class="m-search-form__property-label button-search-filter"
                  for="property-operator"
                >
                  operator
                </label>
              </li>
            </ul>
          </div>
        </form>
        <button
          class="m-search-page__toggle-mobile-display-button"
        >
          Show map instead
        </button>
      </div>
      <div
        class="m-search-display"
      >
        <div
          class="m-recent-searches"
        >
          <div
            class="m-recent-searches__heading"
          >
            Recent Searches
          </div>
          <ul />
        </div>
      </div>
    </div>
    <div
      class="m-search-page__map"
    >
      <div
        class="m-vehicle-map-state m-vehicle-map-state--auto-centering"
      />
      <div
        class="m-vehicle-map leaflet-container leaflet-touch leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
        id="id-vehicle-map"
        style="position: relative;"
        tabindex="0"
      >
        <div
          class="leaflet-pane leaflet-map-pane"
          style="left: 0px; top: 0px;"
        >
          <div
            class="leaflet-pane leaflet-tile-pane"
          >
            <div
              class="leaflet-layer "
              style="z-index: 1;"
            >
              <div
                class="leaflet-tile-container leaflet-zoom-animated"
                style="z-index: 18; left: 0px; top: 0px;"
              >
                <img
                  alt=""
                  class="leaflet-tile"
                  src="/16/20061/24522.png"
                  style="width: 256px; height: 256px; left: -77px; top: -215px;"
                />
              </div>
            </div>
          </div>
          <div
            class="leaflet-pane leaflet-overlay-pane"
          />
          <div
            class="leaflet-pane leaflet-shadow-pane"
          />
          <div
            class="leaflet-pane leaflet-marker-pane"
          >
            <div
              class="leaflet-marker-icon m-vehicle-map__icon leaflet-zoom-hide leaflet-interactive"
              role="button"
              style="margin-left: 0px; margin-top: 0px; width: 12px; height: 12px; left: 3252915px; top: 2110761px; z-index: 2112761;"
              tabindex="0"
            >
              <svg
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                
        
                <path
                  class="on-time early-red"
                  d="m10 2.7-6.21 16.94a2.33 2.33 0 0 0 1.38 3 2.36 2.36 0 0 0 1.93-.14l4.9-2.67 4.89 2.71a2.34 2.34 0 0 0 3.34-2.8l-5.81-17a2.34 2.34 0 0 0 -4.4 0z"
                  transform="scale(1) rotate(33) translate(-12, -12)"
                />
                
      
              </svg>
            </div>
            <div
              class="leaflet-marker-icon m-vehicle-map__label primary leaflet-zoom-hide leaflet-interactive"
              role="button"
              style="margin-left: -20px; margin-top: 16px; width: 12px; height: 12px; left: 3252915px; top: 2110761px; z-index: 2112761;"
              tabindex="0"
            >
              <svg
                height="16"
                viewBox="0 0 40 16"
                width="40"
              >
                
            
                <rect
                  class="m-vehicle-icon__label-background"
                  height="100%"
                  rx="5.5px"
                  ry="5.5px"
                  width="100%"
                />
                
            
                <text
                  class="m-vehicle-icon__label"
                  dominant-baseline="central"
                  text-anchor="middle"
                  x="50%"
                  y="50%"
                >
                  
              1
            
                </text>
                
          
              </svg>
            </div>
            <div
              class="leaflet-marker-icon m-garage-icon leaflet-zoom-hide"
              role="button"
              style="margin-left: -10px; margin-top: -25px; width: 21px; height: 25px; left: -58950px; top: -71276px; z-index: -71276;"
              tabindex="0"
            >
              <svg />
            </div>
            <div
              class="leaflet-marker-icon m-garage-icon__label leaflet-zoom-hide"
              role="button"
              style="margin-left: 14px; margin-top: -25px; width: 12px; height: 12px; left: -58950px; top: -71276px; z-index: -71276;"
              tabindex="0"
            >
              <svg
                height="30"
                width="200"
              >
                
				    
                <text
                  y="15"
                >
                  Albany
                </text>
                
				
              </svg>
            </div>
            <div
              class="leaflet-marker-icon m-garage-icon leaflet-zoom-hide"
              role="button"
              style="margin-left: -10px; margin-top: -25px; width: 21px; height: 25px; left: -61008px; top: -68954px; z-index: -68954;"
              tabindex="0"
            >
              <svg />
            </div>
            <div
              class="leaflet-marker-icon m-garage-icon__label leaflet-zoom-hide"
              role="button"
              style="margin-left: 14px; margin-top: -25px; width: 12px; height: 12px; left: -61008px; top: -68954px; z-index: -68954;"
              tabindex="0"
            >
              <svg
                height="30"
                width="200"
              >
                
				    
                <text
                  y="15"
                >
                  Arborway
                </text>
                
				
              </svg>
            </div>
            <div
              class="leaflet-marker-icon m-garage-icon leaflet-zoom-hide"
              role="button"
              style="margin-left: -10px; margin-top: -25px; width: 21px; height: 25px; left: -58620px; top: -71252px; z-index: -71252;"
              tabindex="0"
            >
              <svg />
            </div>
            <div
              class="leaflet-marker-icon m-garage-icon__label leaflet-zoom-hide"
              role="button"
              style="margin-left: 14px; margin-top: -25px; width: 12px; height: 12px; left: -58620px; top: -71252px; z-index: -71252;"
              tabindex="0"
            >
              <svg
                height="30"
                width="200"
              >
                
				    
                <text
                  y="15"
                >
                  Cabot
                </text>
                
				
              </svg>
            </div>
            <div
              class="leaflet-marker-icon m-garage-icon leaflet-zoom-hide"
              role="button"
              style="margin-left: -10px; margin-top: -25px; width: 21px; height: 25px; left: -59349px; top: -74291px; z-index: -74291;"
              tabindex="0"
            >
              <svg />
            </div>
            <div
              class="leaflet-marker-icon m-garage-icon__label leaflet-zoom-hide"
              role="button"
              style="margin-left: 14px; margin-top: -25px; width: 12px; height: 12px; left: -59349px; top: -74291px; z-index: -74291;"
              tabindex="0"
            >
              <svg
                height="30"
                width="200"
              >
                
				    
                <text
                  y="15"
                >
                  Charlestown and Somerville
                </text>
                
				
              </svg>
            </div>
            <div
              class="leaflet-marker-icon m-garage-icon leaflet-zoom-hide"
              role="button"
              style="margin-left: -10px; margin-top: -25px; width: 21px; height: 25px; left: -60066px; top: -76394px; z-index: -76394;"
              tabindex="0"
            >
              <svg />
            </div>
            <div
              class="leaflet-marker-icon m-garage-icon__label leaflet-zoom-hide"
              role="button"
              style="margin-left: 14px; margin-top: -25px; width: 12px; height: 12px; left: -60066px; top: -76394px; z-index: -76394;"
              tabindex="0"
            >
              <svg
                height="30"
                width="200"
              >
                
				    
                <text
                  y="15"
                >
                  Fellsway
                </text>
                
				
              </svg>
            </div>
            <div
              class="leaflet-marker-icon m-garage-icon leaflet-zoom-hide"
              role="button"
              style="margin-left: -10px; margin-top: -25px; width: 21px; height: 25px; left: -54735px; top: -78518px; z-index: -78518;"
              tabindex="0"
            >
              <svg />
            </div>
            <div
              class="leaflet-marker-icon m-garage-icon__label leaflet-zoom-hide"
              role="button"
              style="margin-left: 14px; margin-top: -25px; width: 12px; height: 12px; left: -54735px; top: -78518px; z-index: -78518;"
              tabindex="0"
            >
              <svg
                height="30"
                width="200"
              >
                
				    
                <text
                  y="15"
                >
                  Lynn
                </text>
                
				
              </svg>
            </div>
            <div
              class="leaflet-marker-icon m-garage-icon leaflet-zoom-hide"
              role="button"
              style="margin-left: -10px; margin-top: -25px; width: 21px; height: 25px; left: -61925px; top: -74837px; z-index: -74837;"
              tabindex="0"
            >
              <svg />
            </div>
            <div
              class="leaflet-marker-icon m-garage-icon__label leaflet-zoom-hide"
              role="button"
              style="margin-left: 14px; margin-top: -25px; width: 12px; height: 12px; left: -61925px; top: -74837px; z-index: -74837;"
              tabindex="0"
            >
              <svg
                height="30"
                width="200"
              >
                
				    
                <text
                  y="15"
                >
                  North Cambridge
                </text>
                
				
              </svg>
            </div>
            <div
              class="leaflet-marker-icon m-garage-icon leaflet-zoom-hide"
              role="button"
              style="margin-left: -10px; margin-top: -25px; width: 21px; height: 25px; left: -56354px; top: -66181px; z-index: -66181;"
              tabindex="0"
            >
              <svg />
            </div>
            <div
              class="leaflet-marker-icon m-garage-icon__label leaflet-zoom-hide"
              role="button"
              style="margin-left: 14px; margin-top: -25px; width: 12px; height: 12px; left: -56354px; top: -66181px; z-index: -66181;"
              tabindex="0"
            >
              <svg
                height="30"
                width="200"
              >
                
				    
                <text
                  y="15"
                >
                  Quincy
                </text>
                
				
              </svg>
            </div>
            <div
              class="leaflet-marker-icon m-garage-icon leaflet-zoom-hide"
              role="button"
              style="margin-left: -10px; margin-top: -25px; width: 21px; height: 25px; left: -58958px; top: -70717px; z-index: -70717;"
              tabindex="0"
            >
              <svg />
            </div>
            <div
              class="leaflet-marker-icon m-garage-icon__label leaflet-zoom-hide"
              role="button"
              style="margin-left: 14px; margin-top: -25px; width: 12px; height: 12px; left: -58958px; top: -70717px; z-index: -70717;"
              tabindex="0"
            >
              <svg
                height="30"
                width="200"
              >
                
				    
                <text
                  y="15"
                >
                  Southampton
                </text>
                
				
              </svg>
            </div>
          </div>
          <div
            class="leaflet-pane leaflet-tooltip-pane"
          />
          <div
            class="leaflet-pane leaflet-popup-pane"
          />
        </div>
        <div
          class="leaflet-control-container"
        >
          <div
            class="leaflet-top leaflet-left"
          />
          <div
            class="leaflet-top leaflet-right"
          >
            <div
              class="leaflet-control-zoom leaflet-bar leaflet-control"
            >
              <a
                aria-disabled="false"
                aria-label="Zoom in"
                class="leaflet-control-zoom-in"
                href="#"
                role="button"
                title="Zoom in"
              >
                <span
                  aria-hidden="true"
                >
                  +
                </span>
              </a>
              <a
                aria-disabled="false"
                aria-label="Zoom out"
                class="leaflet-control-zoom-out"
                href="#"
                role="button"
                title="Zoom out"
              >
                <span
                  aria-hidden="true"
                >
                  −
                </span>
              </a>
            </div>
            <div
              class="leaflet-bar leaflet-control"
            >
              <a
                aria-label="Full Screen"
                class="leaflet-control-zoom-fullscreen fullscreen-icon"
                href="#"
                role="button"
                title="Full Screen"
              />
            </div>
            <div
              class="leaflet-control leaflet-bar m-vehicle-map__recenter-button"
            >
              
		
              <a
                aria-label="Recenter Map"
                href="#"
                role="button"
                title="Recenter Map"
              >
                
		    
                <svg
                  height="26"
                  viewBox="-5 -5 32 32"
                  width="26"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  
			
                  <path
                    d="m10 2.7-6.21 16.94a2.33 2.33 0 0 0 1.38 3 2.36 2.36 0 0 0 1.93-.14l4.9-2.67 4.89 2.71a2.34 2.34 0 0 0 3.34-2.8l-5.81-17a2.34 2.34 0 0 0 -4.4 0z"
                    transform="rotate(60, 12, 12)"
                  />
                  
		    
                </svg>
                
		
              </a>
            </div>
          </div>
          <div
            class="leaflet-bottom leaflet-left"
          />
          <div
            class="leaflet-bottom leaflet-right"
          >
            <div
              class="leaflet-control-attribution leaflet-control"
            >
              © 
              <a
                href="http://osm.org/copyright"
              >
                OpenStreetMap
              </a>
               contributors
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
